reprod